# sfx-rs

./: Cargo.toml  Knapsack_Greedy.cpp  README.md
crates/sfx-cli/: Cargo.toml  build.rs
crates/sfx-cli/src/: main.rs
crates/sfx-stub/: Cargo.toml
crates/sfx-stub/src/: main.rs
